dress up github page using template

--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,11 @@ navbarlinks:
 - navbar:    "Zip File"
   link:      "/template.zip"
 - navbar:    "TarBall"
-  link:      "/template.tar.bz2"
+  link:      "/hakimamarullah.tar.bz2.txt"
 - navbar:    "GitHub"
   link:      "https://github.com/hakimamarullah"
 - navbar:    "About"
   link:      "/ABOUT/"
-- navbar:    "GitHub Page"
-  link:      "https://hakimamarullah.github.io/os212"
 title:       "OS212"
 lang:        "en-US"
 author:      "Hakim Amarullah"
